ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.forward: >
      {
        "Type":"forward",
        "ForwardConfig":{
          "TargetGroups":[
            {"ServiceName":"blue-service","ServicePort":"80","Weight":100},
            {"ServiceName":"green-service","ServicePort":"80","Weight":0}
          ]
        }
      }
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue-service   # 👈 switch later
            port:
              number: 80
